# multiinput-rust

./: Cargo.toml  README.md
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/multiinput/: all.html  fn.get_device_info.html  fn.get_event.html  fn.get_joystick_state.html  fn.get_serial_number.html  fn.print_raw_device_list.html  fn.produce_raw_device_list.html  fn.raw_handle_to_name.html  fn.raw_name_to_hid.html  index.html  sidebar-items.js
doc/multiinput/devices/: enum.DeviceInfo.html  enum.HatSwitch.html  index.html  sidebar-items.js  struct.Axes.html  struct.Devices.html  struct.DevicesDisplayInfo.html  struct.JoystickDisplayInfo.html  struct.JoystickInfo.html  struct.JoystickState.html  struct.KeyboardDisplayInfo.html  struct.KeyboardInfo.html  struct.MouseDisplayInfo.html  struct.MouseInfo.html  struct.RawAxes.html
doc/multiinput/event/: KeyId.t.html  RawEvent.t.html  enum.Axis.html  enum.KeyId.html  enum.MouseButton.html  enum.RawEvent.html  enum.State.html  index.html  sidebar-items.js
doc/multiinput/manager/: DeviceStats.t.html  DeviceType.t.html  RawInputManager.t.html  XInputInclude.t.html  enum.DeviceType.html  enum.XInputInclude.html  index.html  sidebar-items.js  struct.DeviceStats.html  (+1 more)
examples/: 3d_test.rs  apitest.rs  filter_test.rs  separatemouse.rs  shader.rs
examples/shaders/: polar.frag  polar.geom  polar.vs  square.frag  square.geom  square.vs  tunnel.vs  vertex.frag  vertex.vs
src/: devices.rs  event.rs  hidmod.rs  joystick.rs  keyboard.rs  lib.rs  manager.rs  mouse.rs  rawinput.rs  registrar.rs
(+43 files in other folders)
